--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_get_tree_length">GetTreeLengthActivity</string>
     <string name="title_activity_db">DbActivity</string>
+    <string name="title_activity_taking_photo">TakingPhotoActivity</string>
+    <string name="title_activity_taking_photo_activity2">TakingPhotoActivity2</string>
 
 </resources>
