--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_db">DbActivity</string>
     <string name="title_activity_taking_photo">TakingPhotoActivity</string>
     <string name="title_activity_taking_photo_activity2">TakingPhotoActivity2</string>
+    <string name="title_activity_get_left_side_dendrochronology">GetLeftSideDendrochronology</string>
 
 </resources>
