Zamiana aktywnosci pola powierzchni sloi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="title_activity_taking_photo_activity2">TakingPhotoActivity2</string>
     <string name="title_activity_get_left_side_dendrochronology">GetLeftSideDendrochronology</string>
     <string name="title_activity_how_to_measure">HowToMeasureActivity</string>
+    <string name="title_activity_get_dendrochronology2">GetDendrochronology2</string>
 
 </resources>
